# swiftpp

./: CMakeLists.txt  LICENSE  README.md  changes.txt  setup_llvm.txt  todo.txt
examples/SimpleShapeDetector/SimpleShapeDetector/: AppDelegate.swift  DetectCorners.cpp  DetectCorners.h  GeometryUtils.cpp  GeometryUtils.h  Info.plist  Path2D.cpp  Path2D.h  ShapeDetector.cpp  ShapeDetector.h  ShapeDetector.swift  ShapeView.swift  SimpleShapeDetector-Bridging-Header.h  cpp-Bridging-Header.h  cpp-converter.mm  cxx-Bridging-Header.h  cxx-converter.h  cxx-converter.mm  main.swift
examples/SimpleShapeDetector/SimpleShapeDetector.xcodeproj/: project.pbxproj
examples/SimpleShapeDetector/SimpleShapeDetector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/SimpleShapeDetector/SimpleShapeDetector/Base.lproj/: MainMenu.xib
examples/SimpleShapeDetector/SimpleShapeDetector/cxx-Bridging-Header/: cxx-objc-proxies.h  cxx-objc-proxies.mm
src/: CodeTemplate.cpp  CodeTemplate.h  SwiftBridgeOutput.cpp  SwiftBridgeOutput.h  SwiftBridgeTmpl.h  SwiftppASTConsumer.cpp  SwiftppASTConsumer.h  SwiftppASTVisitor.cpp  SwiftppASTVisitor.h  SwiftppData.cpp  SwiftppData.h  SwiftppData_ouput.cpp  SwiftppObjcOutput.cpp  SwiftppObjcOutput.h  SwiftppObjcTemplates.h  SwiftppOutput.cpp  SwiftppOutput.h  Version.h  main.cpp  substringref.cpp  substringref.h
swiftpp.xcodeproj/: project.pbxproj
swiftpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/: Makefile  readme.txt  test.pl
tests/1/: Makefile  classes.cpp  classes.h  main.swift  test.swift
tests/2/: bridging-header.h  classes.cpp  classes.h  main.swift  test.swift
tests/3/: Makefile  bridging-header.h  classes.h  main.swift  readme.txt  test.swift
tests/4/: Makefile  bridging-header.h  classes.cpp  classes.h  main.swift  readme.txt  test.swift
tests/5/: Makefile  classes.cpp  classes.h  main.swift  test.swift
tests/6/: bridging-header.h  classes.cpp  classes.h  main.swift  readme.txt  test.swift
tests/enum/: classes.h  main.swift
tests/method_calls_1/: main.swift  readme.txt
tests/method_calls_2/: classes.h  main.swift  readme.txt
tests/multiple_classes/: classes.cpp  readme.txt
tests/reentrency/: classes.cpp  main.swift
